# LLM-Recommendation-Engine

./: .gitignore  README.md  cli.py  config.yaml  pyproject.toml
api/: __init__.py  server.py
ranking/: __init__.py  scorer.py  vectorizer.py
storage/: __init__.py  base.py  dynamodb_adapter.py  firestore_adapter.py  sqlite_adapter.py
tagging/: __init__.py  ollama_client.py  prompt_builder.py
tests/: __init__.py  test_ranking.py  test_tagging.py
